try finding the par command full path

--- a/.github/workflows/test-par-binary.yaml
+++ b/.github/workflows/test-par-binary.yaml
@@ -14,4 +14,4 @@ jobs:
       - name: Run test-par
         run: |
           chmod +x ./test-par
-          ./test-par par
+          ./test-par $(which par)
