Fix running tests against binary

--- a/.github/workflows/test-par-binary.yaml
+++ b/.github/workflows/test-par-binary.yaml
@@ -10,7 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install par command
-        run: sudo apt install par
+        run: |
+          sudo apt-get update
+          sudo apt-get install locales par
       - name: Run test-par
         run: |
           chmod +x ./test-par
